syntax = "proto3";
package elestodao.elesto.did.v1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "did/v1/did.proto";
import "gogoproto/gogo.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/elesto-dao/elesto/v2/x/did";

// this line is used by starport scaffolding # 1

// Query defines the gRPC querier service.
service Query {
  // DidDocument queries a did documents with an id.
  rpc DidDocument(QueryDidDocumentRequest) returns (QueryDidDocumentResponse) {
    option (google.api.http).get = "/elesto/did/dids/{id}";
  }
}

// QueryDidDocumentsRequest is request type for Query/DidDocuments RPC method.
message QueryDidDocumentRequest {
  string id = 1; // did id used for getting a did document by did id
}

// QueryDidDocumentsResponse is response type for the Query/DidDocuments RPC method
message QueryDidDocumentResponse {
  // Returns a did document
  DidDocument didDocument = 1  [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
